--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Headline</h1>
 		</header>
 			<section id="content">
-				<canvas id="Dice" data-processing-sources="Dice.pde">
+				<canvas id="Dice" data-processing-sources="Dice.pde", "class_variable_declaration">
 				</canvas>
 		    </section>
 	    <footer>
