--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Dice Project</h1>
 		</header>
 			<section id="content">
 				<canvas id="Dice" data-processing-sources="Dice.pde class_variable_declarations.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Rolls 62 dice and tallies them. Press "Re-Roll" in the middle of the bottom of the screen to reroll all 62 dice.
 	    </footer>
 	</body>
 </html>
